--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
   "author": "Jeremy Gonzalez",
   "license": "ISC",
   "dependencies": {
+    "babel-preset-react": "^6.24.1",
+    "express": "^4.16.3",
+    "jest": "^23.4.2",
+    "puppeteer": "^1.6.1",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-table": "^6.8.6"
+  },
+  "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "puppeteer": "^1.6.1"
+    "babel-preset-env": "^1.7.0"
   }
 }
