--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Jeremy Gonzalez",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "express": "^4.16.3",
     "jest": "^23.4.2",
